{
  "appTitle": "Directory",
  "theme": "Theme",
  "exit": "Exit",
  "loginViaEmail": "Login via email",
  "email": "Email",
  "enterValidEmail": "Enter valid email",
  "password": "Password",
  "enterValidPassword": "Enter valid password",
  "login": "Login",
  "signUp": "Sign Up",
  "forgot": "Forgot",
  "register": "Register",
  "or": "or",
  "confirm": "Confirm",
  "passwordDoesNotMatch": "Password does not match",
  "accountCreated": "Account created",
  "passwordHasBeenReset": "Password has been reset and emailed to you",
  "forgotPassword": "Forgot Password",
  "reset": "Reset",
  "edit": "Edit",
  "newContact": "New Contact",
  "search": "Search",
  "noResultsFound": "No Results Found",
  "contactSaved": "Contact saved successfully",
  "contactDeleted": "Contact deleted successfully",
  "contactSaveError": "An error occurred saving Contact",
  "contactDeleteError": "An error occurred deleting Contact",
  "firstName": "First Name",
  "enterValidFirstName": "Enter valid first name",
  "lastName": "Last Name",
  "enterValidLastName": "Enter valid last name",
  "phone": "Phone",
  "enterValidPhone": "Enter valid phone number",
  "role": "Role",
  "enterValidRole": "Enter valid role",
  "save": "Save",
  "delete": "Delete",
  "ok": "Ok",
  "cancel": "Cancel",
  "deleteThisContact": "Would you like to delete this contact?",
  "noInternetConnection": "No Internet Connection",
  "cancelChanges": "Cancel changes",
  "cancelChangesMessage": "Details have changed.\nAre you sure you want to cancel?",
  "yes": "Yes",
  "no": "No",
  "about": "About",
  "aboutTitle": "About Directory",
  "aboutContent": "Directory allows an organisation to store phone numbers and emails ot be accessible on mobile devices and click to call, email ot text."
}