...
  }

  Widget signUpButton(BuildContext context, String email, bool isEnabled) {
    return Padding(
      padding: const EdgeInsets.only(top: 15, right: 5),
      child: ElevatedButton(
          key: const Key('signup'),
          onPressed: isEnabled
              ? () => Navigator.push(
                    context,
                    MaterialPageRoute(
                        builder: (context) => SignUpPage(email: email)),
                  )
...
  }

  Widget forgotPassword(BuildContext context, String email, bool isEnabled) {
    return Padding(
      padding: const EdgeInsets.only(top: 15, left: 5),
      child: ElevatedButton(
          key: const Key('forgotpassword'),
          onPressed: isEnabled
              ? () => Navigator.push(
                    context,
                    MaterialPageRoute(
                        builder: (context) => ResetPasswordPage(email: email)),
                  )
...
