...
    return BlocBuilder<ContactCubit, ContactState>(
        buildWhen: (previous, current) =>
            previous.firstNameField != current.firstNameField,
        builder: (context, state) {
          final t = AppLocalizations.of(context)!;
          return TextInput(
            key: const Key('firstname'),
            hint: t.firstName,
            keyboardType: TextInputType.name,
            initialValue: state.firstNameField.value,
            hasError: state.firstNameField.hasError,
            error: t.enterValidFirstName,
            enabled: isEnabled,
...
    return BlocBuilder<ContactCubit, ContactState>(
        buildWhen: (previous, current) =>
            previous.lastNameField != current.lastNameField,
        builder: (context, state) {
          final t = AppLocalizations.of(context)!;
          return TextInput(
            key: const Key('lastname'),
            hint: t.lastName,
            keyboardType: TextInputType.name,
            initialValue: state.lastNameField.value,
            hasError: state.lastNameField.hasError,
            error: t.enterValidLastName,
            enabled: isEnabled,
...
