...

  static List<Widget> createActions(BuildContext context) {
    final textColor =
        Theme.of(context).textTheme.titleMedium?.color ?? Colors.grey;
    return [
      PopupMenuButton(
          key: const Key('menu'),
          offset: const Offset(0, 60),
          shape: const RoundedRectangleBorder(
            borderRadius: BorderRadius.all(
              Radius.circular(20.0),
            ),
          ),
...
